# tryggare

./: .containerignore  .dockerignore  .env.example  .env.prod.example  .env.prod.template  .env.production.example  .gitignore  AUTH_FIX.md  AUTH_IMPLEMENTATION.md  BACKEND_VERIFICATION_PLAN.md  BACKEND_VERIFICATION_RESULTS.md  CHANGELOG.md  CHECKIN_REBUILD_SUMMARY.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPONENT_REFACTORING_PLAN.md  CONTRIBUTING.md  CURRENT_TASKS.md  CURRENT_TASKS_20251123.md  CURRENT_TASKS_I18N_20251125.md  CURRENT_TASKS_PRINTING_20251203.md  DEBUG_CHECKLIST.md  DOCKER.md  DOCKER_MIGRATION_SUMMARY.md  Dockerfile  HANDOVER.md  I18N_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_PLAN.md  LOGIN_REDIRECT_FIX.md  Makefile  PHASE3_IMPLEMENTATION_SUMMARY.md  PRINTING_PLAN.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_FIXES.md  PROJECT_SPECIFICATION.md  QUICK_START.md  README.md  README_TESTING.md  SECURITY.md  STATIC_FILES_FIX.md  (+39 more)
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.prod  Makefile  README.md  SELENIUM_TESTING_PLAN.md  SELENIUM_TESTING_README.md  TESTING_QUICKSTART.md  add_test_data.py  authplan.md  demo_ticket_api.py  pyproject.toml  pytest.ini  restart.txt  run_selenium_local.sh  run_selenium_tests.sh  test_api.py  test_api.sh  test_models.py  test_new_features.py  test_print_queue.py  test_print_queue_e2e.py  test_prod_debug.py  test_production.sh  test_qr_page_e2e.py  test_recently_printed_fix.py  test_selenium_docker.py  test_selenium_full_flows.py  test_selenium_login.py  test_timer_countdown.py  test_websocket.py  verify.py
backend/OLD_TESTS/: README.md  test_01_login.py  test_auth.py  test_prod_debug.py  test_qr_page.py  test_recently_printed_fix.py  test_selenium_comprehensive.py  test_selenium_login.py  test_simple_login.py  test_timer_countdown.py
backend/accounts/: admin.py  models.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/checkins/: admin.py  audit.py  consumers.py  models.py  qr_utils.py  serializers.py  tests.py  utils.py  views.py
backend/checkins/migrations/: 0001_initial.py  0002_alter_checkinrecord_options_and_more.py  0003_checkinrecord_supervised_and_more.py  0004_qrcode.py  0005_auditlog_user_nullable.py  0006_auditlog_session_id_auditlog_source_ip.py
backend/config/: asgi.py  routing.py  urls.py  ws_auth.py
backend/config/settings/: base.py  (+7 more)
backend/demo/: apps.py  tasks.py
backend/events/: admin.py  models.py  serializers.py  signals.py  tests.py  views.py
backend/families/: admin.py  apps.py  dsar.py  models.py  qr_views.py  serializers.py  tasks.py  tests.py  tests_gdpr.py  tests_scheduler.py  tests_ticket_lookup.py  views.py
backend/imports/: admin.py  apps.py  encryption.py  importer.py  models.py  parser.py  serializers.py  views.py
backend/printing/: admin.py  models.py  serializers.py  urls.py  views.py
backend/reports/: admin.py  models.py  serializers.py  services.py  tests.py  views.py
backend/scripts/: add_test_data.py  demo_ticket_api.py
backend/test-results/: README.txt
backend/tests/: README.md  SETUP_NOTES.md  __init__.py  test_security.py
printer-client/: .env.example  .gitignore  README.md  client.py  install.sh  pyproject.toml  requirements.txt  start.sh
printer-client/client/: __init__.py
printer-client/docs/: troubleshooting.md
(+458 files in other folders)
