[project]
name = "check-ins-backend"
version = "0.1.0"
description = "Django backend for check-ins migration"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "Django>=5.0,<6.0",
    "djangorestframework>=3.15,<3.16",
    "channels>=4.1,<5.0",
    "channels-redis>=4.2,<5.0",
    "django-cors-headers>=4.4,<5.0",
    "psycopg[binary]>=3.1,<3.2",
    "python-dotenv>=1.0,<2.0",
    "daphne>=4.1,<5.0",
    "whitenoise>=6.7,<7.0",
]

package = false

[dependency-groups]
dev = [
    "django-stubs>=5.0.4",
    "djangorestframework-stubs>=3.15",
    "ruff>=0.6.9",
]
