[project]
name = "tryggare-backend"
version = "0.1.0"
description = "Django backend for Tryggare"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "Django>=5.0,<6.0",
    "djangorestframework>=3.15,<3.16",
    "django-filter>=24.0,<25.0",
    "channels>=4.1,<5.0",
    "channels-redis>=4.2,<5.0",
    "django-cors-headers>=4.4,<5.0",
    "psycopg[binary]>=3.1,<3.2",
    "python-dotenv>=1.0,<2.0",
    "daphne>=4.1,<5.0",
    "whitenoise>=6.7,<7.0",
    "qrcode[pil]>=7.4,<8.0",
    "requests>=2.31,<3.0",
    "apscheduler>=3.10,<4.0",
]

package = false

[dependency-groups]
dev = [
    "django-stubs>=5.0.4",
    "djangorestframework-stubs>=3.15",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "ruff>=0.6.9",
]
test = [
    "pytest>=8.0,<9.0",
    "pytest-django>=4.0,<5.0",
    "pytest-cov>=4.0,<5.0",
    "selenium>=4.15,<5.0",
    "webdriver-manager>=4.0,<5.0",
]

[tool.ruff]
exclude = [".venv", "migrations", "staticfiles"]

[tool.ruff.lint.per-file-ignores]
# Django settings use star imports and conditional top-level logic
"config/settings/*.py" = ["F403", "F405", "E402"]
# ASGI/WSGI entrypoints must call django.setup() before importing app code
"config/asgi.py" = ["E402"]
"config/wsgi.py" = ["E402"]
# Ad-hoc scripts run standalone; they bootstrap Django before importing models
"add_test_data.py" = ["E402", "F841", "E722"]
"demo_ticket_api.py" = ["E402", "F841"]
"test_api.py" = ["E402"]
"test_models.py" = ["E402"]
"test_print_queue.py" = ["E402"]
"test_websocket.py" = ["E402"]
"verify.py" = ["E402"]
# Tests use bare except to probe UI state and assign variables for readability
"tests/**/*.py" = ["E722", "F841"]
"**/tests.py" = ["E722", "F841"]
"**/tests/**/*.py" = ["E722", "F841"]
