[project]
name = "check-ins-printer-client"
version = "0.1.0"
description = "Label printer client for the Conference Child Management System"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "websockets>=12.0",
    "weasyprint>=60.0",
    "pymupdf>=1.24.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "brother_ql-inventree",
]

[project.optional-dependencies]
network = [
    "puresnmp>=2.0.0",
    "zeroconf>=0.38.0",
]

[project.scripts]
printer-client = "client:run"

[tool.uv.sources]
brother_ql-inventree = { git = "https://github.com/jswetzen/brother_ql-inventree.git" }

[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "client"
module-root = ""
